--- a/assets/css/footerMedia.css
+++ b/assets/css/footerMedia.css
@@ -93,23 +93,27 @@
     padding-top: 44px;
     height: 988px;
   }
+  .footer__logo {
+    margin-top: 1px;
+  }
   .footer__logo-img {
-    width: 151px;
+    width: 146px;
     height: 47px;
 }
   .footer__main-grid {
-    height: 800px;
+    min-height: 849px;
     grid-template-columns: 1fr;
-    grid-template-rows: 40px 19% 21% 40px 60px 60px 60px 60px;
+    grid-template-rows: 40px 17% 20% 71px 67px 151px 60px;
     gap: 10px;
-    row-gap: 20px;
+    row-gap: 18px;
     column-gap: 0;
+    margin-bottom: 17px;
   }
 
   .footer__social-links {
     grid-column-start: 1;
-    grid-row-start: -2;
-    grid-row-end: -1;
+    grid-row-start: 7;
+    grid-row-end: 8;
     justify-self: start;
     align-self: center;
   }
@@ -161,10 +165,11 @@
   .footer__footer {
     flex-direction: column;
     position: relative;
+    min-height: 68px;
   }
   .footer__link-privacyPolicy {
     position: absolute;
-    top: -25px;
+    top: -61px;
     left: 0;
   }
 }
