--- a/assets/css/salons.css
+++ b/assets/css/salons.css
@@ -86,6 +86,24 @@
   border-radius: 10px;
 }
 
+.map-responsive{
+  overflow:hidden;
+  padding-bottom: 38.25%;
+  position:relative;
+  height:0;
+  border-radius: 10px;
+  margin-bottom: 107px;
+}
+
+.map-responsive iframe{
+  left:0;
+  top:0;
+  height: 100%;
+  width:100%;
+  position:absolute;
+  
+}
+
   .salons__button {
     margin-bottom: 25px;
 }
@@ -105,7 +123,7 @@
   .salons__entry {
     flex-direction: column;
   }
-  .salons__map {
+  .map-responsive {
     min-height: 386px;
     margin-bottom: 69px;
 }
@@ -149,8 +167,7 @@
     flex-direction: column;
   }
 
-  .salons__map {
-    /* max-width: 387px; */
+  .map-responsive {
     min-height: 414px;
     margin-bottom: 56px;
   }
